# LLMOps

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  app.py  chatbot_after_ingestion_test.py  data_ingestion_test.py  init_db.py  main.py  pyproject.toml  redis_setup.py  requirements.txt  test.py  uv.toml  workflow.py
.github/workflows/: aws.yaml  ci.yaml  task_definition.json
api/: main.py
api/routers/: chat.py  data_upload.py  files.py  messages.py  session.py
db/: chat_repository.py  database.py  models.py
external_topics/: .gitignore  db_caching.py  pathlib_test.py  test_asyncio.py
multi-doc-chat/utils/: config_loader.py
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/graph/: builder.py  nodes.py  orchestrator.py  state.py
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/models/: model.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/redis_cache/: redis_client.py
multi_doc_chat/tools/: groq_tools.py  tool_detection.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  hashing_for_redis.py  model_loader.py  table.py  thread_pool.py  vision.py
notebooks/: test.ipynb
orchestrator/: orchestrator_manager.py
redis_cache/: redis_client.py
streamlit_app/: app.py
test/: asyncio.py  data_ingestion_test.py  db_caching.py  exception_and_log.py  external_api_response_caching.py  profiling_fastApi.py  redis_setup.py  test.sqlite3  test_asyncio.py
test/profiles/: compute_12_02_2025_12_13_18_952974.prof  (+4 more)
(+2 files in other folders)
